@@ -5,7 +5,6 @@ import com.yahoo.cloud.config.ConfigserverConfig;
 import com.yahoo.config.model.NullConfigModelRegistry;
 import com.yahoo.config.model.api.ConfigDefinitionRepo;
 import com.yahoo.config.provision.Zone;
-import com.yahoo.vespa.config.server.application.PermanentApplicationPackage;
 import com.yahoo.vespa.config.server.filedistribution.FileServer;
 import com.yahoo.vespa.config.server.host.ConfigRequestHostLivenessTracker;
 import com.yahoo.vespa.config.server.host.HostRegistry;
@@ -15,12 +14,6 @@ import com.yahoo.vespa.config.server.provision.HostProvisionerProvider;
 import com.yahoo.vespa.config.server.rpc.RpcRequestHandlerProvider;
 import com.yahoo.vespa.config.server.rpc.RpcServer;
 import com.yahoo.vespa.config.server.rpc.security.NoopRpcAuthorizer;
-import com.yahoo.vespa.config.server.session.SessionPreparer;
-import com.yahoo.vespa.config.server.session.SessionTest;
-import com.yahoo.vespa.config.server.zookeeper.ConfigCurator;
-import com.yahoo.vespa.curator.Curator;
-import com.yahoo.vespa.curator.mock.MockCurator;
-import com.yahoo.vespa.flags.InMemoryFlagSource;
 import com.yahoo.vespa.model.VespaModelFactory;
 import org.junit.Before;
 import org.junit.Rule;
@@ -28,7 +21,7 @@ import org.junit.Test;
 import org.junit.rules.TemporaryFolder;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 import static org.hamcrest.Matchers.is;
 import static org.junit.Assert.assertThat;
@@ -39,13 +32,9 @@ import static org.junit.Assert.assertTrue;
  */
 public class InjectedGlobalComponentRegistryTest {
 
-    private Curator curator;
-    private Metrics metrics;
-    private SessionPreparer sessionPreparer;
     private ConfigserverConfig configserverConfig;
     private RpcServer rpcServer;
     private ConfigDefinitionRepo defRepo;
-    private PermanentApplicationPackage permanentApplicationPackage;
     private GlobalComponentRegistry globalComponentRegistry;
     private ModelFactoryRegistry modelFactoryRegistry;
     private Zone zone;
@@ -55,45 +44,35 @@ public class InjectedGlobalComponentRegistryTest {
 
     @Before
     public void setupRegistry() throws IOException {
-        curator = new MockCurator();
-        ConfigCurator configCurator = ConfigCurator.create(curator);
-        metrics = Metrics.createTestMetrics();
-        modelFactoryRegistry = new ModelFactoryRegistry(Collections.singletonList(new VespaModelFactory(new NullConfigModelRegistry())));
+        modelFactoryRegistry = new ModelFactoryRegistry(List.of(new VespaModelFactory(new NullConfigModelRegistry())));
         configserverConfig = new ConfigserverConfig(
                 new ConfigserverConfig.Builder()
                         .configServerDBDir(temporaryFolder.newFolder("serverdb").getAbsolutePath())
                         .configDefinitionsDir(temporaryFolder.newFolder("configdefinitions").getAbsolutePath()));
-        sessionPreparer = new SessionTest.MockSessionPreparer();
         HostRegistry hostRegistry = new HostRegistry();
         rpcServer = new RpcServer(configserverConfig, null, Metrics.createTestMetrics(),
                                   hostRegistry, new ConfigRequestHostLivenessTracker(),
                                   new FileServer(temporaryFolder.newFolder("filereferences")),
                                   new NoopRpcAuthorizer(), new RpcRequestHandlerProvider());
         defRepo = new StaticConfigDefinitionRepo();
-        permanentApplicationPackage = new PermanentApplicationPackage(configserverConfig);
-        HostProvisionerProvider hostProvisionerProvider = HostProvisionerProvider.withProvisioner(new MockProvisioner());
         zone = Zone.defaultZone();
         globalComponentRegistry =
-                new InjectedGlobalComponentRegistry(curator, configCurator, metrics, modelFactoryRegistry, sessionPreparer,
-                                                    rpcServer, configserverConfig, defRepo, permanentApplicationPackage,
-                                                    hostProvisionerProvider, zone,
-                                                    new ConfigServerDB(configserverConfig), new InMemoryFlagSource(),
-                                                    new MockSecretStore(), hostRegistry);
+                new InjectedGlobalComponentRegistry(modelFactoryRegistry,
+                                                    rpcServer,
+                                                    configserverConfig,
+                                                    defRepo,
+                                                    zone,
+                                                    new ConfigServerDB(configserverConfig));
     }
 
     @Test
     public void testThatAllComponentsAreSetup() {
         assertThat(globalComponentRegistry.getModelFactoryRegistry(), is(modelFactoryRegistry));
-        assertThat(globalComponentRegistry.getSessionPreparer(), is(sessionPreparer));
-        assertThat(globalComponentRegistry.getMetrics(), is(metrics));
-        assertThat(globalComponentRegistry.getCurator(), is(curator));
         assertThat(globalComponentRegistry.getConfigserverConfig(), is(configserverConfig));
         assertThat(globalComponentRegistry.getReloadListener().hashCode(), is(rpcServer.hashCode()));
         assertThat(globalComponentRegistry.getTenantListener().hashCode(), is(rpcServer.hashCode()));
         assertThat(globalComponentRegistry.getStaticConfigDefinitionRepo(), is(defRepo));
-        assertThat(globalComponentRegistry.getPermanentApplicationPackage(), is(permanentApplicationPackage));
-        assertThat(globalComponentRegistry.getZone(), is (zone));
-        assertTrue(globalComponentRegistry.getHostProvisioner().isPresent());
+        assertThat(globalComponentRegistry.getZone(), is(zone));
     }
 
 }
